examples/simple/implementation-defined/IMPL-CEB8-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int main() {
  int x = -1;
  return x >> 1;
}
